Updated diagrams and created ActionGenerator.py