@@ -70,13 +70,6 @@ dependencies {
 	implementation project(":commons")
 }
 
-tasks.withType(JavaCompile) {
-	options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-	jvmArgs += "--enable-preview"
-}
 
 dependencyManagement {
 	imports {
